# karaoke-successor

./: .config  .gitignore  .gitref  CODE_ANALYSIS_REPORT.md  EXTENSION_ROADMAP.md  FEATURE_IDEAS.md  README.md  REVIEW10_WORKLOG.md  REVIEW7_WORKLOG.md  REVIEW9_WORKLOG.md  REVIEW_CYCLE4_WORKLOG.md  ROADMAP.md  TODO_IMPROVEMENTS.md  WORKLOG.md  analyze_colors.py  analyze_detailed.py  analyze_logo.mjs  analyze_logo2.mjs  analyze_ocr_enhanced.py  analyze_regions.py  analyze_structure.py  analyze_text.py  analyze_vlm3.mjs  build-standalone.sh  build.sh  code-review-report.py  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  prepare-bundle.sh  test-timing.js  tsconfig.json  ultrastar_doc.json  vitest.config.ts  worklog-cleanup.md  worklog-cycle3.md  worklog-fix-all.md  worklog-review12.md  (+1 more)
.cargo/: config.toml
__tests__/: i18n.test.ts  medley-snippet-generator.test.ts  player-progression.test.ts  ultrastar-parser.test.ts
agent-ctx/: 1-main.md  4-main.md
app/: karaoke-app.tsx  layout.tsx  page.tsx
docs/: remaining-issues.md  review-session-worklog.md  ultrastar-format.md  worklog-review2.md  worklog-review3.md  worklog-review4.md  worklog-review5.md  worklog.md
download/: karaoke-feature-analysis-corrected.md  karaoke-feature-analysis.md  usdx_format.json  vocaluxe_player.txt
e2e/: app.spec.ts
hooks/: use-app-effects.ts  use-battle-royale-game.ts  use-battle-royale-round-timer.ts  use-companion-sync.ts  use-editor-keyboard-shortcuts.ts  use-editor-playback.ts  use-folder-scanner.ts  use-game-audio-effects.ts  use-game-flow-handlers.ts  use-game-loop.ts  use-game-media.ts  use-game-modes.ts  use-game-settings.ts  use-library-filters.ts  use-mobile-connection.ts  use-mobile-data.ts  use-mobile-game-sync.ts  use-mobile-pitch-detection.ts  use-mobile-pitch-polling.ts  use-native-audio.ts  use-note-scoring.ts  use-practice-playback.ts  use-qr-code.ts  use-sqlite.ts  use-tap-note-placement.ts  use-toast.ts  use-viral-charts.ts
leaderboard-api/: .htaccess  README.md  index.php  schema.sql
lib/: native-fs.ts  qr-code.ts  rate-limiter.ts  url-utils.ts  utils.ts
playwright-report/: index.html
prisma/: schema.prisma
public/: manifest.json  sw.js
scripts/: download-node.mjs  generate-assets.ts  generate-locale-files.mjs  prepare-bundle.mjs  split-i18n.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundled/: README.md
src-tauri/bundled/server/: standalone-server.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: analysis_commands.rs  commands.rs  devices.rs  mod.rs  player.rs
src-tauri/src/audio/analysis/: analyzer.rs  bpm.rs  crepe.rs  mod.rs  octave.rs  types.rs  voicing.rs  yin.rs
src-tauri/src/charts/: commands.rs  mod.rs  sources.rs
src-tauri/src/db/: commands.rs  mod.rs  schema.rs
(+989 files in other folders)
