[package]
name = "karaoke-successor"
version = "1.0.0"
description = "Karaoke Successor - The ultimate karaoke experience"
authors = ["Karaoke Successor Team"]
edition = "2021"

[lib]
name = "karaoke_successor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
