[package]
name = "karaoke-successor"
version = "1.0.0"
description = "Karaoke Successor - The ultimate karaoke experience"
authors = ["Karaoke Successor Team"]
edition = "2021"

[lib]
name = "karaoke_successor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Audio: native output (ASIO / WASAPI) + decoding
cpal = "0.15"
symphonia = { version = "0.5", features = ["mp3", "aac", "vorbis", "flac", "wav", "pcm", "isomp4", "mkv", "ogg"] }
rubato = "0.15"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
